--- a/templates/list.html
+++ b/templates/list.html
@@ -30,6 +30,16 @@
         <!-- Bootstrap Core JavaScript -->
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
+        <!-- Google Analytics -->
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-77511251-1', 'auto');
+            ga('send', 'pageview');
+        </script>
     </head>
 
     <body>
@@ -115,8 +125,19 @@
                     {% endfor %}
                     {% endif %}
                 </div>
-                <div class="col-md-3 right_section" style="height:600px;">
-                    <p>Google Ads Goes Here</p>
+                <div class="col-md-3 right_section" style="height: 600px;">
+                    <p>
+                        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                        <!-- List Right -->
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-8707435519460072"
+                             data-ad-slot="7443859543"
+                             data-ad-format="auto"></ins>
+                        <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </p>
                 </div>
             </div>
         </div>
